--- a/src/App.css
+++ b/src/App.css
@@ -8,36 +8,27 @@
     top: 0;
     left: 0;
   }
-  
-  .needle {
+  .scaleobjects {
     position: absolute;
     top: 0;
     left: 0;
     
  }
- .bugimg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    
- }
- .flagimg {
-    position: absolute;
-    top: 0;
-    left: 0;
- }
-
- .cover {
-    position: absolute;
-    top: 0;
-    left: 0;
- }
- .circle {
+ .circleoff {
    position: absolute;
    top: 170px;
    left: 90px;
    height: 20px;
    width: 20px;
    border-radius: 50%;
-   background: radial-gradient(circle, rgba(168,28,28,1) 0%, rgba(58,21,21,1) 100%);
+   background: radial-gradient(circle, rgb(124, 18, 18) 0%, rgba(58,21,21,1) 100%);
+ }
+ .circleon {
+   position: absolute;
+   top: 170px;
+   left: 90px;
+   height: 20px;
+   width: 20px;
+   border-radius: 50%;
+   background: radial-gradient(circle, rgb(255, 153, 153) 0%, rgb(255, 0, 0) 100%);
  }
